# ClosureExternalProducer

./: .gitignore  ClosureExternalProducer.cabal  LICENSE  Makefile  README.md  clos_test.hs
Text/Language/: Closure.hs
